package entities.mario;

public interface MarioState {
    public void setState();
    public void removeState();
}
