package entities.updateables;

public interface Bouncer extends UpdatableEntity {
    public void bounce();
}
