package entities.updateables.enemies;

public interface ShellEnemy extends Enemy {
    public void setShell(boolean s);
    public boolean getShell();
}
