@startuml
interface Entity 
interface UpdateableEntity
interface MovableEntity
interface Bouncer

interface Enemy 
interface ShellEnemy
interface PowerUp
interface MarioState
interface MarioAction

abstract class BaseMarioState
abstract class Body
abstract class UpdateableBody
abstract class BaseMovableEntity
abstract class BaseEnemy
abstract class BaseMarioAction

UpdateableEntity -u-|> Entity
Body .u.|> Entity

UpdateableBody .u.|> UpdateableEntity
UpdateableBody -u-|> Body

BaseMovableEntity .u.|> MovableEntity
BaseMovableEntity -u-|> UpdateableBody

Bouncer -u-|> UpdateableEntity

Body "1" --> "1" GameGraphicElement

Block -u-|> Body
Block "1" --> "1" BlockCollider

Brick -u-|> Body
Brick "1" --> "1" BrickCollider

Pipe -u-|> Body
Pipe "1" --> "1" PipeCollider

QuestionBlock -u-|> UpdateableBody
QuestionBlock "1" --> "1" QuestionBlockCollider
QuestionBlock "1" --> "1" UpdateableEntity

Enemy -u-|> UpdateableEntity
Enemy -u-|> MovableEntity

BaseEnemy .u.|> Enemy
BaseEnemy -u-|> BaseMovableEntity

Goomba -u-|> BaseEnemy
Goomba "1" --> "1" GoombaCollider

ShellEnemy -u-|> Enemy

KoopaTroopa .u.|> ShellEnemy
KoopaTroopa -u-|> BaseEnemy
KoopaTroopa "1" --> "1" KoopaTroopaCollider

BuzzyBeetle .u.|> ShellEnemy
BuzzyBeetle -u-|> BaseEnemy
BuzzyBeetle "1" --> "1" BuzzyBeetleCollider

Lakitu -u-|> BaseEnemy
Lakitu "1" --> "1" LakituCollider

Spiny -u-|> BaseEnemy
Spiny "1" --> "1" SpinyCollider

PiranhaPlant -u-|> BaseEnemy
PiranhaPlant "1" --> "1" PiranhaPlantCollider

PowerUp -u-|> UpdateableEntity
PowerUp -u-|> MovableEntity

FireFlower .u.|> PowerUp
FireFlower -u-|> BaseMovableEntity
FireFlower "1" --> "1" FireFlowerCollider

GreenMushroom .u.|> PowerUp
GreenMushroom -u-|> BaseMovableEntity
GreenMushroom "1" --> "1" GreenMushroomCollider

SuperMushroom .u.|> PowerUp
SuperMushroom -u-|> BaseMovableEntity
SuperMushroom "1" --> "1" SuperMushroomCollider

Star .u.|> Bouncer
Star .u.|> PowerUp
Star -u-|> BaseMovableEntity
Star "1" --> "1" StarCollider

FireBall .u.|> Bouncer
FireBall -u-|> BaseMovableEntity
FireBall "1" --> "1" FireBallCollider
FireBall "1" --> "1" ThrowFireBall

Coin -u-|> UpdateableBody
Coin "1" --> "1" CoinCollider

EmptyBlock -u-|> Body
EmptyBlock "1" --> "1" EmptyBlockCollider

FlagPole -u-|> Body
FlagPole "1" --> "1" FlagPoleCollider

Castle -u-|> Block

Mario -u-|> UpdateableBody
Mario "1" --> "4..*" MarioAction
Mario "1" --> "0..*" MarioState
Mario "1" --> "1" MarioCollider
Mario "1" --> "1" Stats
Mario "1" --> "1" Direction

BaseMarioState .u.|> MarioState
BaseMarioState "1" --> "1" MarioCollider

SuperMario -u-|> BaseMarioState
SuperMario "1" --> "1" Crouch

FireMario -u-|> BaseMarioState
FireMario "1" --> "1" Crouch
FireMario "1" --> "1" ThrowFireBall

BaseMarioAction .u.|> MarioAction

ActionComparator .u.|> Comparator

Crouch -u-|> BaseMarioAction
DisappearSprite -u-|> BaseMarioAction
ResolveSprite -u-|> BaseMarioAction
HorizontalMovement -u-|> BaseMarioAction
ResolveHorizontalMovementDirection -u-|> BaseMarioAction
VerticalMovement -u-|> BaseMarioAction
ThrowFireBall -u-|> BaseMarioAction
@enduml
